--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/EmiliaJacaszek/todoApp#readme",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "config": "^3.2.4",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.4.0",
     "mongoose": "^5.7.14"
   }
