--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "config": "^3.2.4",
+    "cookie-parser": "^1.4.4",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
