--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-node_modules/
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# build
+dist
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+variables.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.albertignore
+*.map
+firebase-adminsdk.json
+
