--- a/package.json
+++ b/package.json
@@ -1,34 +1,19 @@
 {
-  "name": "todoapp",
-  "version": "1.0.0",
-  "description": "todo app",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EmiliaJacaszek/todoApp.git"
-  },
-  "keywords": [],
-  "author": "Aldona Tomzik",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EmiliaJacaszek/todoApp/issues"
-  },
-  "homepage": "https://github.com/EmiliaJacaszek/todoApp#readme",
-  "dependencies": {
-    "bcrypt": "^3.0.7",
-    "config": "^3.2.4",
-    "cookie-parser": "^1.4.4",
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongodb": "^3.4.0",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "mongoose": "^5.7.14"
+    "name": "todo-node-website",
+    "version": "0.1.0",
+    "description": "To do app built with Node, Express and Pug",
+    "main": "server.js",
+    "scripts": {
+      "start": "npx nodemon server.js"
+    },
+    "author": "Paulina Rycombel",
+    "license": "MIT",
+    "dependencies": {
+      "express": "^4.16.3",
+      "pug": "^2.0.3"
+    },
+    "devDependencies": {
+      "nodemon": "^1.19.0"
+    }
   }
-}
+  
