--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONNECT = mongodb+srv://todoList:123@todoapp-c3syi.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECT = "vidly_Db"
 jwtPrivateKey = "vidly_jwtPrivateKey"
 
